Se termina de completar el ejemplo 7/8/9

--- a/src/main/resources/static/ejemplo9.html
+++ b/src/main/resources/static/ejemplo9.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
+
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>ejemplo 9</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
     </head>
     <body>
-        <div>TODO write content</div>
+        <h1>Formulario</h1>
+        <form action="#">
+            <label>Nombre:</label>
+            <input placeholder="Digite su nombre" type="text" name="nombre" value="" size="20"/>
+            <br/>
+            <label>Apellidos:</label>
+            <input type="text" name="aplellidos" value="" size="30"/>
+            <br/>
+            <label>Correo:</label>
+            <input type="text" name="Correo" value=""/>
+            <br/>
+            <input type="submit" name="Registrar" value="Registrar"/>            
+        </form>        
     </body>
 </html>
