Prueba actualizacion a Netbeans16

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
     <body>
         <!-- Esta etiqueta indica al navegador que es un encabezado -->
         <header id="encabezado">
-            <h1>Tienda en Linea</h1>
+            <h1>Tienda Mario en Linea</h1>
             <br/>
         </header>
         <nav id="menu">
